cabal-version:      3.0
name:               warp-s2n-tls
version:            0.1.0.0
synopsis:           TLS support for Warp via s2n-tls
description:
    This package provides TLS support for the Warp web server using
    the s2n-tls library.

license:            Apache-2.0
license-file:       LICENSE
author:             Daniel Goertzen
maintainer:         daniel.goertzen@gmail.com
copyright:          2026 Daniel Goertzen
category:           Web, Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
extra-source-files: test/certs/server.pem
                    test/certs/server-key.pem
tested-with:        GHC == 9.8.2
homepage:           https://github.com/goertzenator/warp-s2n-tls
bug-reports:        https://github.com/goertzenator/warp-s2n-tls/issues

source-repository head
    type:     git
    location: https://github.com/goertzenator/warp-s2n-tls.git

source-repository this
    type:     git
    location: https://github.com/goertzenator/warp-s2n-tls.git
    tag:      v0.1.0.0

library
    exposed-modules:    Network.Wai.Handler.WarpS2N
    build-depends:      base >= 4.16 && < 5
                      , warp >= 3.4.13 && < 4
                      , wai >= 3.2 && < 4
                      , s2n-tls ^>= 0.1
                      , async >= 2.2 && < 2.3
                      , bytestring >= 0.10 && < 0.13
                      , entropy >= 0.4 && < 0.5
                      , network >= 3.0 && < 3.3
                      , streaming-commons >= 0.2 && < 0.3
                      , unbounded-delays >= 0.1 && < 0.2
                      , stm >= 2.5 && < 2.6
    hs-source-dirs:     src
    default-language:   GHC2021
    default-extensions: OverloadedRecordDot
    ghc-options:        -Wall

test-suite warp-s2n-tls-test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      TestUtils
                      , AppMonadTests
                      , CertLoadingTests
                      , IntegrationTests
                      , ProtocolTests
                      , SessionTicketTests
    build-depends:      base >= 4.16 && < 5
                      , warp-s2n-tls
                      , warp
                      , wai
                      , s2n-tls
                      , hspec
                      , bytestring
                      , network
                      , http-types
                      , async
                      , tls
                      , x509-store
                      , data-default-class
                      , connection
                      , unliftio
                      , mtl
    hs-source-dirs:     test
    default-language:   GHC2021
    default-extensions: OverloadedStrings
                      , OverloadedRecordDot
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
